--- a/NLP/Pretrained_Word_Embeddings_GloVe.ipynb
+++ b/NLP/Pretrained_Word_Embeddings_GloVe.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPHGl4BWnf9Li3NSScFWcmH",
+      "authorship_tag": "ABX9TyM5ycc2ppbhtn1qjwpJPHeC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -800,7 +800,7 @@
       "metadata": {
         "id": "gB6hxLJ4rFBi"
       },
-      "execution_count": 63,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -813,9 +813,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LxIf1jcvrSDL",
-        "outputId": "50eb411d-3286-4bec-d1b5-bc24bc24b7d7"
+        "outputId": "246485c3-ec30-484a-aee2-bc40ac50fecf"
       },
-      "execution_count": 64,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -865,19 +865,86 @@
         "model.fit(int_train_ds, validation_data=int_val_ds, epochs=10, callbacks=callbacks)"
       ],
       "metadata": {
-        "id": "QdPatJUbry4F"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QdPatJUbry4F",
+        "outputId": "e982227f-9bc7-495d-fc52-993e86db6632"
       },
-      "execution_count": null,
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "625/625 [==============================] - 64s 58ms/step - loss: 0.5714 - accuracy: 0.6938 - val_loss: 0.4951 - val_accuracy: 0.7728\n",
+            "Epoch 2/10\n",
+            "625/625 [==============================] - 36s 58ms/step - loss: 0.4558 - accuracy: 0.7893 - val_loss: 0.4494 - val_accuracy: 0.7834\n",
+            "Epoch 3/10\n",
+            "625/625 [==============================] - 39s 63ms/step - loss: 0.4071 - accuracy: 0.8209 - val_loss: 0.3824 - val_accuracy: 0.8316\n",
+            "Epoch 4/10\n",
+            "625/625 [==============================] - 30s 48ms/step - loss: 0.3755 - accuracy: 0.8378 - val_loss: 0.3931 - val_accuracy: 0.8224\n",
+            "Epoch 5/10\n",
+            "625/625 [==============================] - 32s 51ms/step - loss: 0.3505 - accuracy: 0.8521 - val_loss: 0.3404 - val_accuracy: 0.8516\n",
+            "Epoch 6/10\n",
+            "625/625 [==============================] - 28s 44ms/step - loss: 0.3267 - accuracy: 0.8629 - val_loss: 0.3590 - val_accuracy: 0.8374\n",
+            "Epoch 7/10\n",
+            "625/625 [==============================] - 33s 53ms/step - loss: 0.3080 - accuracy: 0.8752 - val_loss: 0.3186 - val_accuracy: 0.8668\n",
+            "Epoch 8/10\n",
+            "625/625 [==============================] - 28s 45ms/step - loss: 0.2923 - accuracy: 0.8786 - val_loss: 0.3203 - val_accuracy: 0.8650\n",
+            "Epoch 9/10\n",
+            "625/625 [==============================] - 30s 47ms/step - loss: 0.2780 - accuracy: 0.8869 - val_loss: 0.3098 - val_accuracy: 0.8732\n",
+            "Epoch 10/10\n",
+            "625/625 [==============================] - 32s 52ms/step - loss: 0.2610 - accuracy: 0.8956 - val_loss: 0.3163 - val_accuracy: 0.8706\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7fbcc4484fa0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = keras.models.load_model(\"glove_embeddings_sequence_model.keras\")"
+      ],
+      "metadata": {
+        "id": "Yunu5hOBsMDn"
+      },
+      "execution_count": 76,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(f\"Text accuracy: {model.evaluate(int_test_ds)[1]: .3f}\")"
+      ],
       "metadata": {
-        "id": "Yunu5hOBsMDn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RdKtbSo7v3eM",
+        "outputId": "5c6c3893-a6b1-4450-a275-3fa2be2e378a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "782/782 [==============================] - 19s 21ms/step - loss: 0.2981 - accuracy: 0.8752\n",
+            "Text accuracy:  0.875\n"
+          ]
+        }
+      ]
     }
   ]
 }
