in progress English to Spanish translation

--- a/NLP/Language_Translation.ipynb
+++ b/NLP/Language_Translation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNa+OSr+iP7gx8zrIhxuz7x",
+      "authorship_tag": "ABX9TyPbjQqVxEsz7VVVVJfJDZrf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,140 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "poMjT7Iiyf4N"
+        "id": "poMjT7Iiyf4N",
+        "outputId": "e0be8c4f-d39d-4193-cfbe-24ae1a8fd6c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-06-09 01:36:51--  http://storage.googleapis.com/download.tensorflow.org/data/spa-eng.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 108.177.98.128, 74.125.197.128, 74.125.135.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|108.177.98.128|:80... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 2638744 (2.5M) [application/zip]\n",
+            "Saving to: ‘spa-eng.zip’\n",
+            "\n",
+            "\rspa-eng.zip           0%[                    ]       0  --.-KB/s               \rspa-eng.zip         100%[===================>]   2.52M  --.-KB/s    in 0.009s  \n",
+            "\n",
+            "2023-06-09 01:36:51 (267 MB/s) - ‘spa-eng.zip’ saved [2638744/2638744]\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "!wget http://storage.googleapis.com/download.tensorflow.org/data/spa-eng.zip"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip -q spa-eng.zip"
+      ],
+      "metadata": {
+        "id": "1q36y4WezGcG"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text_file = \"spa-eng/spa.txt\""
+      ],
+      "metadata": {
+        "id": "ohvQ6Y4zzMeZ"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(text_file) as f:\n",
+        "  lines = f.read().split(\"\\n\")[:-1] "
+      ],
+      "metadata": {
+        "id": "nIZ5Qvoe0Apk"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text_pair = []"
+      ],
+      "metadata": {
+        "id": "J1KWEdR00Ot6"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"spa-eng/san.txt\", 'w') as w:\n",
+        "  w.writelines(\"Santosh sarangi \\n123 780 \\nHello \\nZebra animal\")"
+      ],
+      "metadata": {
+        "id": "jHGeCFhC0ZLp"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"spa-eng/san.txt\") as f:\n",
+        "  lines = f.read().split(\"\\n\")"
+      ],
+      "metadata": {
+        "id": "6NkLOqeV4DxG"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lines"
+      ],
+      "metadata": {
+        "id": "lfxaeprS4Z2U",
+        "outputId": "19a46b91-ce6d-439a-e9b9-b48a4d827561",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Santosh sarangi ', '123 780 ', 'Hello ', 'Zebra animal']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3vLStvSa7TnM"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
