working model from keras documentation

--- a/NLP/Language_Translation.ipynb
+++ b/NLP/Language_Translation.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRDlhNMrLf0ISGo1c9J8ms",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyN+PKmBW/njCKZMfzNraKqo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -31,7 +33,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "poMjT7Iiyf4N",
-        "outputId": "32a3e61c-5eb5-4861-ec9f-a0b021c5af37",
+        "outputId": "73c02169-3f82-46af-aa59-4b3b3df6cff2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -41,16 +43,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-06-12 08:22:54--  http://storage.googleapis.com/download.tensorflow.org/data/spa-eng.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.250.107.128, 74.125.20.128, 108.177.98.128, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.250.107.128|:80... connected.\n",
+            "--2023-06-12 09:45:19--  http://storage.googleapis.com/download.tensorflow.org/data/spa-eng.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.250.152.128, 142.251.172.128, 142.250.128.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.250.152.128|:80... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 2638744 (2.5M) [application/zip]\n",
-            "Saving to: ‘spa-eng.zip’\n",
+            "Saving to: ‘spa-eng.zip.1’\n",
             "\n",
-            "\rspa-eng.zip           0%[                    ]       0  --.-KB/s               \rspa-eng.zip         100%[===================>]   2.52M  --.-KB/s    in 0.01s   \n",
+            "\rspa-eng.zip.1         0%[                    ]       0  --.-KB/s               \rspa-eng.zip.1       100%[===================>]   2.52M  --.-KB/s    in 0.01s   \n",
             "\n",
-            "2023-06-12 08:22:54 (223 MB/s) - ‘spa-eng.zip’ saved [2638744/2638744]\n",
+            "2023-06-12 09:45:19 (242 MB/s) - ‘spa-eng.zip.1’ saved [2638744/2638744]\n",
             "\n"
           ]
         }
@@ -65,10 +67,23 @@
         "!unzip -q spa-eng.zip"
       ],
       "metadata": {
-        "id": "1q36y4WezGcG"
+        "id": "1q36y4WezGcG",
+        "outputId": "296f476d-8ce8-4347-99b0-3a842eb571a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": 2,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "replace spa-eng/_about.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
+            "replace spa-eng/spa.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -135,7 +150,7 @@
       ],
       "metadata": {
         "id": "lfxaeprS4Z2U",
-        "outputId": "a01c4a5e-2448-423e-9e78-73cf0a24d057",
+        "outputId": "9f53095a-d2d0-4f58-ad0a-a69daf0d1fb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -179,15 +194,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gkV-7btOoYYm",
-        "outputId": "a8e55edb-0da9-4ba1-f891-a1b6c32b0bad"
+        "outputId": "5d6bfa0f-f3e8-4a05-b6cc-11334c4f6239"
       },
-      "execution_count": 10,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "('Can you wait a little while?', '[start]¿Puedes esperar un momentito?[end]')\n"
+            "(\"Didn't you hear the doorbell?\", '[start]¿No escuchaste el timbre?[end]')\n"
           ]
         }
       ]
@@ -200,7 +215,7 @@
       "metadata": {
         "id": "s70Ngjwmozmf"
       },
-      "execution_count": 11,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -211,7 +226,7 @@
       "metadata": {
         "id": "R4Mkxq_7o62S"
       },
-      "execution_count": 12,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -222,7 +237,7 @@
       "metadata": {
         "id": "kj7z20_3pJlw"
       },
-      "execution_count": 13,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -233,7 +248,7 @@
       "metadata": {
         "id": "YRJJ9RvYpX75"
       },
-      "execution_count": 14,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -244,7 +259,7 @@
       "metadata": {
         "id": "IwSWClGApgD8"
       },
-      "execution_count": 15,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -255,7 +270,7 @@
       "metadata": {
         "id": "qWd4t0RZppGX"
       },
-      "execution_count": 16,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -356,7 +371,7 @@
       "metadata": {
         "id": "lIxYQFr8q84h"
       },
-      "execution_count": 24,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -365,14 +380,14 @@
         "target_vectorization = layers.TextVectorization(\n",
         "    max_tokens = vocab_size,\n",
         "    output_mode = \"int\",\n",
-        "    output_sequence_length=sequence_length,\n",
+        "    output_sequence_length=sequence_length + 1,\n",
         "    standardize=custom_standardization\n",
         ")"
       ],
       "metadata": {
         "id": "B-EMohlZriry"
       },
-      "execution_count": 25,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -383,7 +398,7 @@
       "metadata": {
         "id": "tfANvb8Ir8cA"
       },
-      "execution_count": 26,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -394,7 +409,7 @@
       "metadata": {
         "id": "mplQka08s_Gc"
       },
-      "execution_count": 27,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -405,7 +420,7 @@
       "metadata": {
         "id": "HbMMHhMdtFYT"
       },
-      "execution_count": 28,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -416,68 +431,8 @@
       "metadata": {
         "id": "mv3EwIB8tLND"
       },
-      "execution_count": 29,
+      "execution_count": 51,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "english"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "id": "twaKgzSLtP5Z",
-        "outputId": "04eefa51-700a-4d0c-bdd2-33ec29fb9588"
-      },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'If you want to sound like a native speaker, you must be willing to practice saying the same sentence over and over in the same way that banjo players practice the same phrase over and over until they can play it correctly and at the desired tempo.'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 30
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "spanish"
-      ],
-      "metadata": {
-        "id": "z9s41D8GXyuT",
-        "outputId": "2e675c1a-9d04-4d8a-87af-a3befe0b6184",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        }
-      },
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'[start]Si quieres sonar como un hablante nativo, debes estar dispuesto a practicar diciendo la misma frase una y otra vez de la misma manera en que un músico de banjo practica el mismo fraseo una y otra vez hasta que lo puedan tocar correctamente y en el tiempo esperado.[end]'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 31
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -487,7 +442,7 @@
       "metadata": {
         "id": "bjW6swGttIFT"
       },
-      "execution_count": 32,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -496,7 +451,7 @@
         "def format_dataset(eng, spa):\n",
         "    eng = source_vectorization(eng)\n",
         "    spa = target_vectorization(spa)\n",
-        "    return ({\"encoder_inputs\": eng, \"decoder_inputs\": spa[:, :-1],}, spa[:, 1:])\n",
+        "    return ({\"english\": eng, \"spanish\": spa[:, :-1],}, spa[:, 1:])\n",
         "\n",
         "\n",
         "def make_dataset(pairs):\n",
@@ -505,7 +460,7 @@
         "    spa_texts = list(spa_texts)\n",
         "    dataset = tf.data.Dataset.from_tensor_slices((eng_texts, spa_texts))\n",
         "    dataset = dataset.batch(batch_size)\n",
-        "    dataset = dataset.map(format_dataset)\n",
+        "    dataset = dataset.map(format_dataset, num_parallel_calls=4)\n",
         "    return dataset.shuffle(2048).prefetch(16).cache()\n",
         "\n",
         "\n",
@@ -515,44 +470,33 @@
       "metadata": {
         "id": "mbEcXdettI4B"
       },
-      "execution_count": 34,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "eng_texts, spa_texts = zip(*train_pairs)"
-      ],
-      "metadata": {
-        "id": "MGGA_0uLtNsF"
-      },
-      "execution_count": 36,
+      "execution_count": 53,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "for inputs, targets in train_ds.take(1):\n",
-        "    print(f'inputs[\"encoder_inputs\"].shape: {inputs[\"encoder_inputs\"].shape}')\n",
-        "    print(f'inputs[\"decoder_inputs\"].shape: {inputs[\"decoder_inputs\"].shape}')\n",
+        "    print(f'inputs[\"english\"].shape: {inputs[\"english\"].shape}')\n",
+        "    print(f'inputs[\"spanish\"].shape: {inputs[\"spanish\"].shape}')\n",
         "    print(f\"targets.shape: {targets.shape}\")"
       ],
       "metadata": {
         "id": "zzyI_HdQtcf6",
-        "outputId": "ef7e60bd-baec-4ebc-b131-94a37c3eb6db",
+        "outputId": "b4c6e373-2805-44f3-cafe-ea9d397eec4f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "inputs[\"encoder_inputs\"].shape: (64, 20)\n",
-            "inputs[\"decoder_inputs\"].shape: (64, 19)\n",
-            "targets.shape: (64, 19)\n"
+            "inputs[\"english\"].shape: (64, 20)\n",
+            "inputs[\"spanish\"].shape: (64, 20)\n",
+            "targets.shape: (64, 20)\n"
           ]
         }
       ]
@@ -669,7 +613,7 @@
       "metadata": {
         "id": "3fwhPtp741sP"
       },
-      "execution_count": 41,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -679,12 +623,12 @@
         "latent_dim = 2048\n",
         "num_heads = 8\n",
         "\n",
-        "encoder_inputs = keras.Input(shape=(None,), dtype=\"int64\", name=\"encoder_inputs\")\n",
+        "encoder_inputs = keras.Input(shape=(None,), dtype=\"int64\", name=\"english\")\n",
         "x = PositionalEmbedding(sequence_length, vocab_size, embed_dim)(encoder_inputs)\n",
         "encoder_outputs = TransformerEncoder(embed_dim, latent_dim, num_heads)(x)\n",
         "encoder = keras.Model(encoder_inputs, encoder_outputs)\n",
         "\n",
-        "decoder_inputs = keras.Input(shape=(None,), dtype=\"int64\", name=\"decoder_inputs\")\n",
+        "decoder_inputs = keras.Input(shape=(None,), dtype=\"int64\", name=\"spanish\")\n",
         "encoded_seq_inputs = keras.Input(shape=(None, embed_dim), name=\"decoder_state_inputs\")\n",
         "x = PositionalEmbedding(sequence_length, vocab_size, embed_dim)(decoder_inputs)\n",
         "x = TransformerDecoder(embed_dim, latent_dim, num_heads)(x, encoded_seq_inputs)\n",
@@ -700,7 +644,7 @@
       "metadata": {
         "id": "CVzzAKp65HEF"
       },
-      "execution_count": 42,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -715,10 +659,54 @@
         "transformer.fit(train_ds, epochs=epochs, validation_data=val_ds)"
       ],
       "metadata": {
-        "id": "0k1pRAIr5J5l"
+        "id": "0k1pRAIr5J5l",
+        "outputId": "11459b22-02e4-4717-d8d3-d5736d7fa3a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"transformer\"\n",
+            "__________________________________________________________________________________________________\n",
+            " Layer (type)                   Output Shape         Param #     Connected to                     \n",
+            "==================================================================================================\n",
+            " english (InputLayer)           [(None, None)]       0           []                               \n",
+            "                                                                                                  \n",
+            " positional_embedding_8 (Positi  (None, None, 256)   6405120     ['english[0][0]']                \n",
+            " onalEmbedding)                                                                                   \n",
+            "                                                                                                  \n",
+            " spanish (InputLayer)           [(None, None)]       0           []                               \n",
+            "                                                                                                  \n",
+            " transformer_encoder_4 (Transfo  (None, None, 256)   3155456     ['positional_embedding_8[0][0]'] \n",
+            " rmerEncoder)                                                                                     \n",
+            "                                                                                                  \n",
+            " model_9 (Functional)           (None, None, 25000)  18089640    ['spanish[0][0]',                \n",
+            "                                                                  'transformer_encoder_4[0][0]']  \n",
+            "                                                                                                  \n",
+            "==================================================================================================\n",
+            "Total params: 27,650,216\n",
+            "Trainable params: 27,650,216\n",
+            "Non-trainable params: 0\n",
+            "__________________________________________________________________________________________________\n",
+            "1302/1302 [==============================] - 152s 105ms/step - loss: 5.1278 - accuracy: 0.2973 - val_loss: 4.1327 - val_accuracy: 0.3885\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f7eefdf4ac0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
     },
     {
       "cell_type": "code",
